# persil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  changelog.md  flake.nix  latest  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: documentation.yml  release.yml  test.yml
docs/: api-reference.md  index.md
examples/: json.py  toml.py  yaml.py
main/: 404.html  index.html  objects.inv
main/CHANGELOG/: index.html
main/api-reference/: index.html
main/changelog/: index.html
main/scripts/: plugin.py
main/search/: search_index.json
persil/: __init__.py  parser.py  result.py  stream.py
persil/parsers/: __init__.py  from_enum.py  index.py  regex.py  string.py
src/persil/: __init__.py  forward.py  generator.py  lazy.py  parser.py  result.py  stream.py  utils.py
src/persil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/persil/parsers/: from_enum.py  index.py  outcome.py  regex.py  string.py  tag.py
tests/: test_date.py  test_datetime_from_stream.py  test_from_enum.py  test_from_stream.py  test_generate.py  test_index.py  test_json_parser.py  test_lazy_parser.py  test_parser_combinators.py  test_persil_ast.py  test_regex.py  test_result.py  test_skip.py  test_span.py  test_streaming_api.py  test_string.py  test_until.py  test_until_excluding.py  test_utils.py
tests/assets/: test.toml
tmp/: test.yaml
v0.1.0rc1/api-reference/: index.html
v0.1.0rc1/changelog/: index.html
