[project]
name = "persil"
version = "0.2.0"
description = "A pure-Python, zero-dependency parsing library, inspired by Parsy."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
docs = ["mike>=2.1.3", "mkdocs-material>=9.7.0", "mkdocstrings[python]>=1.0.0"]
lint = ["mypy>=1.19.0", "pre-commit>=4.5.0", "ruff>=0.14.7"]
test = ["hypothesis>=6.148.3", "pytest>=9.0.1", "pytest-cov>=7.0.0"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov persil --cov-report term --cov-report xml"
testpaths = ["tests"]

[tool.mypy]
packages = ["persil", "tests"]
